feat: final tweaks and features, partially works
