# openapi3.yaml
@@ -15,97 +15,45 @@ paths:
         - heights
       summary: get points heights
       requestBody:
+        description: Points to calculate heights for.
         content:
           application/json:
             schema:
-              type: object
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-  /heights/path:
-    post:
-      operationId: getPath
-      tags:
-        - heights
-      summary: get path heights
-      requestBody:
-        content:
-          application/json:
+              $ref: '#/components/schemas/pointsReq'
+          application/octet-stream:
             schema:
-              type: object
+              type: string
+              format: binary
       responses:
         200:
           description: OK
           content:
             application/json:
               schema:
-                type: object
-  /heights/polygon:
-    post:
-      operationId: getPolygon
-      tags:
-        - heights
-      summary: get polygon heights
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-      responses:
-        200:
-          description: OK
+                $ref: '#/components/schemas/pointsRes'
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+        500: 
+          description: Service Error
           content:
             application/json:
               schema:
-                type: object
-  /heights:
-    post:
-      operationId: getHeights
-      tags:
-        - heights
-      summary: get heights for any given geojson
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-      responses:
-        200:
-          description: OK
+                $ref: '#/components/schemas/error'
+        404:
+          description: Could not find terrain providers for the requested parameters.,
           content:
             application/json:
               schema:
-                type: object
-  /heights/{longitude}/{latitude}:
-    get:
-      operationId: getHeight
-      tags:
-        - heights
-      summary: get height at a specific (lon,lat)
-      parameters:
-        - name: longitude
-          in: path
-          required: true
-          schema:
-            type: number
-          example: 35.034
-        - name: latitude
-          in: path
-          required: true
-          schema:
-            type: number
-          example: 32.691
-      responses:
-        200:
-          description: OK
+                $ref: '#/components/schemas/error'
+        400:
+          description: Points density is too low to compute
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/height'
+                $ref: '#/components/schemas/error'
+
 components:
   schemas:
     error:
@@ -115,11 +63,68 @@ components:
       properties:
         message:
           type: string
-    height:
+    pointsReq:
       type: object
       required:
-        - dem
+        - positions
       properties:
-        dem:
-          type: number
-          format: int64
+        positions:
+          type: array
+          items:
+            type: object
+            required:
+              - longitude
+              - latitude
+            properties:
+              longitude:
+                type: number
+                format: double
+              latitude:
+                type: number
+                format: double
+        productType:
+          oneOf:
+            - $ref: '#/components/schemas/productTypeEnum'
+          default: MIXED
+        excludeFields:
+          type: array
+          uniqueItems: true
+          items:
+            oneOf: 
+              - $ref: '#/components/schemas/excludeFieldsEnum'
+          
+    pointsRes:
+      type: object
+      required:
+        - data
+      properties:
+        data:
+          type: array
+          items:
+            type: object
+            required:
+              - longitude
+              - latitude
+              - height
+            properties:
+              longitude:
+                type: number
+                format: double
+              latitude:
+                type: number
+                format: double
+              height:
+                type: number
+                format: double
+    productTypeEnum:
+      type: string
+      enum: 
+        - DSM
+        - DTM
+        - MIXED
+    excludeFieldsEnum:
+      type: string
+      enum:
+        - productType
+        - updateDate
+        - resolutionMeter
